<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android1:background="@drawable/fondo"
    android1:orientation="vertical"
    tools:context="com.alfonso.trazaexplosivo.Logon" >

    <ScrollView
        android1:id="@+id/scrollView1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content" >

        <LinearLayout
            android1:layout_width="fill_parent"
            android1:layout_height="wrap_content"
            android1:orientation="vertical" >

            <TextView
                android1:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbEmpresa"
                android1:gravity="center_horizontal"
                android1:maxLines="1"
                android1:textColor="@color/rojo"
                android1:textSize="30sp" />

            <TextView
                android1:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbActividadEmpresa"
                android1:gravity="center_horizontal"
                android1:maxLines="2"
                android1:textColor="@color/rojo"
                android1:textSize="20sp" />

            <TableLayout
                android1:id="@+id/tableLayout1"
                android1:layout_width="fill_parent"
                android1:layout_height="wrap_content"
                android1:layout_marginTop="30dp" >

                <TableRow
                    android1:id="@+id/tableRow1"
                    android1:layout_width="wrap_content"
                    android1:layout_height="wrap_content"
                    android1:paddingLeft="25dp"
                    android1:paddingRight="25dp" >

                    <TextView
                        android1:id="@+id/textView3"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:text="@string/lblUser"
                        android1:textColor="@color/rojo"
                        android1:textSize="15sp" />

                    <EditText
                        android1:id="@+id/etUser"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:layout_weight="1"
                        android1:ems="10"
                        android1:textColor="@color/blanco"
                        android1:textSize="15sp" >

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android1:id="@+id/tableRow2"
                    android1:layout_width="wrap_content"
                    android1:layout_height="wrap_content"
                    android1:paddingLeft="25dp"
                    android1:paddingRight="25dp" >

                    <TextView
                        android1:id="@+id/textView4"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:text="@string/lblContra"
                        android1:textColor="@color/rojo"
                        android1:textSize="15sp" />

                    <EditText
                        android1:id="@+id/etPass"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android1:layout_weight="1"
                        android1:ems="10"
                        android1:inputType="textPassword" />
                </TableRow>

                <TableRow
                    android1:id="@+id/tableRow3"
                    android1:layout_width="wrap_content"
                    android1:layout_height="wrap_content"
                    android1:layout_gravity="center"
                    android1:gravity="center" >

                    <Button
                        android1:id="@+id/btLogin"
                        android1:layout_width="wrap_content"
                        android1:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/botones"
                        android:layout_marginRight="@dimen/botones"
                        android1:layout_marginTop="15dp"
                        android1:text="@string/lbBtLogin" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android1:id="@+id/linearLayout1"
                android1:layout_width="fill_parent"
                android1:layout_height="wrap_content"
                android1:layout_gravity="center"
                android1:layout_marginTop="10dp"
                android1:gravity="center"
                android1:orientation="vertical" >

                <TextView
                    android1:id="@+id/txtEmpresa"
                    android1:layout_width="wrap_content"
                    android1:layout_height="wrap_content"
                    android1:layout_marginTop="25dp"
                    android1:text="@string/lblEmail"
                    android1:textColor="@color/rojo" />

                <TextView
                    android1:id="@+id/textView6"
                    android1:layout_width="wrap_content"
                    android1:layout_height="wrap_content"
                    android1:layout_marginTop="25dp"
                    android1:text="@string/lblColaboracion"
                    android1:textColor="@color/azul" />

                <TextView
                    android1:id="@+id/textView7"
                    android1:layout_width="wrap_content"
                    android1:layout_height="wrap_content"
                    android1:layout_marginTop="25dp"
                    android1:text="@string/lblCorreo1"
                    android1:textColor="@color/azul" />

                <TextView
                    android1:id="@+id/textView8"
                    android1:layout_width="wrap_content"
                    android1:layout_height="wrap_content"
                    android1:text="@string/lblCorreo2"
                    android1:textColor="@color/azul" />

                <TextView
                    android1:id="@+id/textView9"
                    android1:layout_width="wrap_content"
                    android1:layout_height="wrap_content"
                    android1:layout_marginTop="25dp"
                    android1:text="@string/lblCopyright"
                    android1:textColor="@color/azul" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>